--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -318,7 +318,7 @@ header .navbar {
 
 .banner-item-01 {
 	padding: 300px 0px;
-	background-image: url(../images/bg1.png);
+	background-image: url(../images/bg_img.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
