--- a/assets/css/templatemo-sixteen.css
+++ b/assets/css/templatemo-sixteen.css
@@ -89,11 +89,12 @@ a.filled-button:hover {
 }
 
 .products-heading {
-	background-image: url(../images/slide_02.jpg);
+	background-image: url(../images/aw11.jfif);
+	 
 }
 
 .about-heading {
-	background-image: url(../images/head.jpg);
+	background-image: url(../images/aw4.jfif);
 }
 
 .contact-heading {
